--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -1,16 +1,2 @@
-<div class="container mt-4">
-
-    <a href="/add" class="btn btn-primary">Добавить</a>
-
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th scope="col">ФИО</th>
-            <th scope="col">Телефон</th>
-        </tr>
-        </thead>
-        {{#each contacts}}
-            {{> contact}}
-        {{/each}}
-    </table>
+<div id="app">
 </div>
