--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,10 +7,13 @@
 </head>
 
 <body>
-<div class="container">
-    {{{body}}}
-</div>
-<script src="/javascripts/script.js"></script>
+    <div class="container">
+        <div id="app">
+            {{{body}}}
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/javascripts/script.js"></script>
 </body>
 
 </html>
