Добавил функционал управления контактами

--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -1,2 +1,12 @@
-<div id="app">
+<div class="mt-4">
+    <button onclick="showAddContactForm()" class="btn btn-primary">Добавить</button>
+    <table class="table table-striped mt-3">
+        <thead>
+            <tr>
+                <th scope="col">ФИО</th>
+                <th scope="col">Телефон</th>
+            </tr>
+        </thead>
+        <tbody id="contacts-list"></tbody>
+    </table>
 </div>
